<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="star">*</string>
    <string name="colon">:</string>
    <string name="equal">=</string>
    <string name="delete">AC</string>
    <string name="remove">CE</string>
    <string name="number_zero">0</string>
    <string name="comma">.</string>
    <string name="left_brace">(</string>
    <string name="right_brace">)</string>
</resources>